# rust_remover

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.sh  get_page_size  get_page_size.cpp  log4rs.yaml
cleverbot-api/: Cargo.toml
cleverbot-api/src/: lib.rs
giphy-api/: Cargo.toml
giphy-api/src/: lib.rs  model.rs
src/: main.rs  statics.rs
src/cmd/: cleverbot.rs  info.rs  mod.rs  remind.rs  utilcmd.rs  utils.rs  voice.rs
src/utils/: http_utils.rs  linear_parse.rs  misc.rs  mod.rs  sharekvp.rs
src/utils/chatterbots/: cleverbot.rs  mod.rs
