[package]
name = "rust_remover"
version = "0.0.1"
authors = ["HeapUnderflow <HeapUnderfl0w@users.noreply.github.com>"]
publish = false
description = "Privat Discord bot with (soon to be) Cleverbot Integration & many more features"

[dependencies]
log = "0.3.7"
log4rs = "0.6.3"
time = "*"
typemap = "0.3.*"
serde_json = "1"
serde = "1"
serde_derive = "1"
futures = "0.1"
base64 = "0.2"
rust-crypto="^0.2"
# pretty_env_logger = "0.1"
# reqwest = "0.6.2" # Disbled because of collision of openssl-sys (Error Source: serenity, Ability to remove: None)

[dependencies.serenity]
version = "*"
features = ["framework", "cache"]

[dependencies.url]
git = "https://github.com/servo/rust-url"
