[package]
name = "rust_remover"
version = "0.0.1"
authors = ["HeapUnderflow <HeapUnderfl0w@users.noreply.github.com>"]
publish = false
description = "Privat Discord bot with (soon to be) Cleverbot Integration & many more features"

[dependencies]
log = "0.3.7"
log4rs = "0.6.3"
time = "*" # Soon to be replaces by chrono as serenity uses it too
typemap = "0.3.*"
serde_json = "1"
serde = "1"
serde_derive = "1"
futures = "0.1"
base64 = "0.2"
rust-crypto="^0.2"
# pretty_env_logger = "0.1"
reqwest = "0.6.2"
chrono = "0.4"

[dependencies.serenity]
version = "0.3"
features = ["framework", "cache"]

[dependencies.url]
git = "https://github.com/servo/rust-url"
